--- a/kamera_spz/config/database.yml
+++ b/kamera_spz/config/database.yml
@@ -24,6 +24,10 @@ default: &default
 development:
   <<: *default
   database: kamera_spz_development
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +62,10 @@ development:
 test:
   <<: *default
   database: kamera_spz_test
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,5 +90,7 @@ test:
 production:
   <<: *default
   database: kamera_spz_production
-  username: kamera_spz
-  password: <%= ENV["KAMERA_SPZ_DATABASE_PASSWORD"] %>
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5432
